--- a/KNN/videoSeg_KNN/Makefile
+++ b/KNN/videoSeg_KNN/Makefile
@@ -20,8 +20,8 @@ CFLAGS = -g -ggdb -O3 -I$(DIR_INC)
 
 CC = g++
 
-$(BIN_TARGET):$(SRC_TARGET)
+$(BIN_TARGET):$(SRC_TARGET) $(OBJ_ISP) $(SRC_ISP)
 	$(CC) -o $(BIN_TARGET) $(CFLAGS) $(INCLUDE_OPENCV) $(SRC_TARGET) $(OBJ_ISP) $(OBJ_MDB) $(LIBS_OPENCV)
 
-$(OBJ_ISP):$(SRC_ISP)
+$(OBJ_ISP):$(SRC_ISP) $(OBJ_MDB)
 	$(CC) -o $(OBJ_ISP) -c $(CFLAGS) $(INCLUDE_OPENCV) $(SRC_ISP) $(OBJ_MDB) $(LIBS_OPENCV)
